--- a/index.html
+++ b/index.html
@@ -19,20 +19,24 @@
     </div>
 
     <div class="col">
-        <h1 style="margin-top: 20px">3D!!! Dice Game</h1>
-        <h4>Made by Seezo SoftWorks</h4> <hr><br><br>
+        <h1 style="margin-top: 20px">3D Dice Game</h1>
+        <h4>Made by Filip Hostinský</h4> <hr><br><br>
 
         <div style="float: bottom">
             <h3>Current Score: Go ahead and play!</h3> <br>
             <p>History: </p>
-            <p>Average: </p>
+            <p>Average: </p> <br>
             <!--<p>Settings: </p>-->
+            <!-- Default checked -->
+            <div class="custom-control custom-switch" id="darkMode">
+                <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                <label class="custom-control-label" for="customSwitch1">Dark mode</label>
+            </div>
 
 
             <button class="btn btn-primary" style="width: 350px; margin-top: 20px">Play</button>
         </div>
     </div>
 </div>
-<p style="color: #848484">Mad props to David for his kindness when sharing his dice with me</p>
 </body>
 </html>
