--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         .button {
             float: right; width: 175px; text-align: right;
         }
+        body {
+            transition: background-color .20s ease;
+        }
     </style>
 </head>
 <body>
@@ -53,7 +56,8 @@
     <p>Increase Chance of Winning (slightly): <button id="inc" class="btn btn-light button">Increase</button></p>
     <p>Decrease Chance of Winning (very): <button id="dec" class="btn btn-light button">Decrease</button></p>
     <p>Reset Current Score: <button id="res" class="btn btn-light button">Reset</button></p>
-    <p style="color: #848484">Score is save even when you leave the site</p>
+    <p style="color: #848484">History is saved even when you leave the site</p>
+    <p style="color: #848484">Mad props to David for creating textures for the dice</p>
 </div>
 
 </body>
