--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 </head>
 <body>
 <div class="row">
-    <div class="col-sm" id="1">
+    <div class="col-md" id="1">
         <canvas id="renderCanvas"></canvas>
         <script type="module" src = "index.js"></script>
     </div>
 
-    <div class="col-sm" id="2" style="overflow-y: auto; margin-left: 20px;">
+    <div class="col-md" id="2" style="overflow-y: auto; margin-left: 20px;">
         <div style="overflow-x: auto;">
             <button class="btn btn-primary" style="width: 350px; margin-top: 20px; display: none">Play</button>
         </div>
@@ -47,7 +47,7 @@
             </div>
 
             <div style="overflow-x: auto; ">
-                <button class="btn btn-primary" style="max-width: 520px !important; margin-top: 20px">Play</button>
+                <button class="btn btn-primary" style="width: 520px; margin-top: 20px">Play</button>
             </div>
 
             <div style="max-width: 500px; margin-left: 20px; margin-top: 75px" id="settings">
